<resources>
    <string name="app_name">Support Management System Mobile</string>
    <string name="login_header">Sign in</string>
    <string name="login_button">Log in</string>
    <string name="register_header">Sign up</string>
    <string name="register_button">Register</string>
    <string name="create_account_button">Create an account</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="login_success">Logged successfully</string>
    <string name="invalid_username_or_password">Invalid username and/or password</string>
    <string name="successfully_registered">Successfully registered. You can now log in</string>
    <string name="server_error">Connection error. Please try again later.</string>
    <string name="name_register_error">Name must contain the first capital letter and between 2 and 30 characters</string>
    <string name="username_register_error">Username must contain between 2 and 36 characters</string>
    <string name="surname_register_error">Surname must contain the first capital letter and between 2 and 60 characters</string>
    <string name="email_register_error">Incorrect e-mail address format</string>
    <string name="password_register_error">Password cannot be empty</string>
    <string name="invalid_data_register_error">Incorrect data was entered</string>
    <string name="ticket_title_error">Ticket title must contain between 5 and 100 characters</string>
    <string name="ticket_description_error">Ticket description must contain between 5 and 500 characters</string>
    <string name="software_version_error">Software version must contain between 1 and 10 characters</string>
    <string name="welcome">Support Management System</string>
    <string name="to_login">Go to login</string>
    <string name="software_supported">Software supported</string>
    <string name="knowledge_list">Knowledge base</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="home_menu">Home</string>
    <string name="tickets_menu">Tickets</string>
    <string name="account_menu">Account</string>
    <string name="role_user">User</string>
    <string name="role_operator">Operator</string>
    <string name="role_admin">Administrator</string>
    <string name="role_unknown">Unknown</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="welcome_header_format">Welcome %1$s!</string>
    <string name="logout">Logout</string>
    <string name="change_profile_data">Change your profile data</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="save_changes_button">Save changes</string>
    <string name="edit_profile_header">Edit profile</string>
    <string name="profile_updated_successfully">Your profile has been updated successfully</string>
    <string name="profile_update_failed">Update failed. Please check your input</string>
    <string name="all_tickets_header">All tickets</string>
    <string name="my_tickets_header">My tickets</string>
    <string name="admin_no_access_tickets">The administrator does not have access to the list of tickets</string>
    <string name="tickets_header">Tickets</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="send_button">Send</string>
    <string name="change_status">Status</string>
    <string name="enter_your_reply">Enter your reply</string>
    <string name="no_replies">No replies yet</string>
    <string name="replies">Replies</string>
    <string name="add_ticket_button">Add ticket</string>
    <string name="session_expired">Your session has expired</string>
    <string name="reply_added">Reply added</string>
    <string name="reply_deleted">Reply deleted</string>
    <string name="delete_reply">Delete reply</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_delete_reply">Are you sure you want to delete this reply?</string>
    <string name="delete_ticket">Delete ticket</string>
    <string name="confirm_delete_ticket">Are you sure you want to delete this ticket?</string>
    <string name="ticket_deleted">Ticket deleted</string>
    <string name="close_button">Close</string>
    <string name="delete_image">Delete image</string>
    <string name="images">Images</string>
    <string name="confirm_delete_image">Are you sure you want to delete this image?</string>
    <string name="image_deleted">Image deleted</string>
    <string name="image_added">Image added</string>
    <string name="ticket_added">Ticket added</string>
    <string name="ticket_updated">Ticket updated</string>
    <string name="add_image">Add image</string>
    <string name="new_ticket">New ticket</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="software">Software</string>
    <string name="software_version">Software version</string>
    <string name="reply_delete_failed">An error occurred while deleting the reply</string>
    <string name="image_delete_failed">An error occurred while deleting the image</string>
    <string name="add_image_failed">An error occurred while uploading the image</string>
    <string name="tickets_load_error">An error occurred while loading the list of tickets</string>
    <string name="ticket_not_found">The specified ticket was not found</string>
    <string name="reply_add_failed">An error occurred while adding the reply</string>
    <string name="status_changed">Ticket status has been changed</string>
    <string name="status_change_failed">An error occurred while changing the ticket status</string>
    <string name="ticket_delete_failed">An error occurred while deleting the ticket</string>
    <string name="no_tickets_found">No tickets to display</string>
    <string name="ticket_is_closed_notice">Ticket closed</string>
    <string name="status_load_error">An error occurred while loading the list of statuses</string>
    <string name="category_format">Category: %1$s</string>
    <string name="priority_format">Priority: %1$s</string>
    <string name="software_format">Software: %1$s (version %2$s)</string>
    <string name="author_format">Author: %1$s</string>
    <string name="date_format">Creation date: %1$s</string>
    <string name="change_status_title">Select a new ticket status</string>
    <string name="ticket_image_description">Image description</string>
    <string name="error_loading_data">An error occurred while loading data</string>
    <string name="no_photos_to_display">No photos to display</string>
    <string name="form_data_load_error">Error loading form data. Please check your connection and try again</string>
    <string name="add_ticket_error">An error occurred while adding ticket</string>
    <string name="update_ticket_error">An error occurred while updating ticket</string>
    <string name="image_prepare_failed">Failed to prepare file for upload</string>
    <string name="management_panel">Management panel</string>
    <string name="manage_categories">Manage categories</string>
    <string name="manage_knowledge_base">Manage knowledge base</string>
    <string name="manage_priorities">Manage priorities</string>
    <string name="manage_software">Manage software</string>
    <string name="manage_statuses">Manage statuses</string>
    <string name="manage_users">Manage users</string>
    <string name="management_categories_header">Manage categories</string>
    <string name="add_new_category">Add new category</string>
    <string name="no_categories_defined">No categories defined. \nClick + to add the first one</string>
    <string name="usage_count_format">Usage count: %d</string>
    <string name="edit_category_title">Edit category</string>
    <string name="delete_category">Delete category</string>
    <string name="confirm_delete_category_message">Are you sure you want to delete the category \'%1$s\' ?</string>
    <string name="category_deleted_successfully">Category deleted successfully</string>
    <string name="category_delete_error">Failed to delete category</string>
    <string name="category_added_successfully">New category added successfully</string>
    <string name="category_add_error">Error adding category</string>
    <string name="category_updated_successfully">Category name updated successfully</string>
    <string name="category_update_error">Error updating category</string>
    <string name="category_name_error">Name must be between 2 and 20 characters</string>
    <string name="category_name_hint">Category name</string>
    <string name="add_new_priority">Add new priority</string>
    <string name="no_priorities_defined">No priorities defined. \nClick + to add the first one</string>
    <string name="edit_priority">Edit priority</string>
    <string name="delete_priority">Delete priority</string>
    <string name="confirm_delete_priority_message">Are you sure you want to delete the priority \'%1$s\' ?</string>
    <string name="priority_name_error">Name must be between 3 and 20 characters</string>
    <string name="priority_name_hint">Priority name</string>
    <string name="priority_deleted_successfully">Priority deleted successfully</string>
    <string name="priority_delete_error">Failed to delete priority</string>
    <string name="priority_added_successfully">New priority added successfully</string>
    <string name="priority_add_error">Error adding priority</string>
    <string name="priority_updated_successfully">Priority updated successfully</string>
    <string name="priority_update_error">Error updating priority</string>
    <string name="add_new_knowledge">Add new entry</string>
    <string name="no_knowledge_defined">No entries in the knowledge base. \nClick + to add the first one</string>
    <string name="edit_knowledge">Edit entry</string>
    <string name="knowledge_title">Title</string>
    <string name="knowledge_content">Content</string>
    <string name="knowledge_title_error">Title must be between 2 and 50 characters</string>
    <string name="knowledge_content_error">Content must be between 20 and 360 characters</string>
    <string name="delete_knowledge_title">Delete entry</string>
    <string name="confirm_delete_knowledge_message">Are you sure you want to delete the entry \'%1$s\' ?</string>
    <string name="knowledge_deleted_successfully">Entry deleted successfully</string>
    <string name="knowledge_delete_error">Failed to delete entry</string>
    <string name="entry_added_successfully">New entry added successfully</string>
    <string name="entry_add_error">Error adding entry</string>
    <string name="entry_updated_successfully">Entry updated successfully</string>
    <string name="entry_update_error">Error updating entry</string>
    <string name="add_new_software">Add new software</string>
    <string name="no_software_defined">No software defined. \nClick + to add the first one</string>
    <string name="usage_count_software_format">Tickets: %1$d, Knowledge base: %2$d</string>
    <string name="add_new_software_title">Add new software</string>
    <string name="edit_software_title">Edit software</string>
    <string name="delete_software_title">Delete software</string>
    <string name="confirm_delete_software_message">Are you sure you want to delete the software \'%1$s\' ?</string>
    <string name="software_name">Software name</string>
    <string name="software_description">Description</string>
    <string name="status_name_hint">Status name</string>
    <string name="closes_ticket_label">Closes ticket</string>
    <string name="default_status_label">Default ticket status</string>
</resources>