<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <TextView
            android:id="@+id/editProfileHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_header"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:hint="@string/name"
            android:autofillHints="givenName"
            android:inputType="text"
            android:textColorHint="#6D676D"
            android:minHeight="48dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:hint="@string/surname"
            android:autofillHints="familyName"
            android:inputType="text"
            android:textColorHint="#6D676D"
            android:minHeight="48dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="#6D676D"
            android:minHeight="48dp"
            android:paddingVertical="12dp" />

        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save_changes_button" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>